fix(Menu): fix width bug when nav is collapsed

--- a/src/components/navMenu/NavMenu.module.css
+++ b/src/components/navMenu/NavMenu.module.css
@@ -3,6 +3,8 @@
   display: inline-block;
 
   &.collapsed {
+    width: 80px;
+
     .headerContainer {
       .logo {
         display: block;
